# storage/api-docs/api-docs.json
@@ -31,7 +31,7 @@
                                     "media_id": {
                                         "type": "string"
                                     },
-                                    "serie_id": {
+                                    "saison_id": {
                                         "type": "string"
                                     },
                                     "isFilmBande": {
@@ -51,6 +51,108 @@
                 },
                 "responses": {
                     "201": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/api/getMediaBandeData/{media_id}": {
+            "post": {
+                "tags": [
+                    "media streamming"
+                ],
+                "summary": "Uget datas streams",
+                "description": "return the content",
+                "operationId": "streamming",
+                "parameters": [
+                    {
+                        "name": "media_id",
+                        "in": "path",
+                        "description": "id of media",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "20110": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/api/getMediaData/{media_id}": {
+            "post": {
+                "tags": [
+                    "media streamming"
+                ],
+                "summary": "Uget datas streams",
+                "description": "return the content",
+                "operationId": "streamming",
+                "parameters": [
+                    {
+                        "name": "media_id",
+                        "in": "path",
+                        "description": "id of media",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "20110": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/api/getSaisonBandeData/{media_id}": {
+            "post": {
+                "tags": [
+                    "media streamming"
+                ],
+                "summary": "Uget datas streams",
+                "description": "return the content",
+                "operationId": "streamming",
+                "parameters": [
+                    {
+                        "name": "media_id",
+                        "in": "path",
+                        "description": "id of media",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "20110": {
                         "description": "Successful operation"
                     },
                     "400": {
